<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_gradient"
    tools:context=".PaymentActivity">

    <TextView
        android:id="@+id/textPaymentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/payment_header"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"/>

    <RadioGroup
        android:layout_marginTop="30dp"
        android:id="@+id/groupradio"
        android:layout_below="@+id/textPaymentHeader"
        android:layout_marginLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radia_id1"
            android:text="@string/paytm"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radia_id2"
            android:text="@string/google_pay"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radia_id3"
            android:text="@string/phone_pe"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupradio"
        android:layout_marginTop="70dp"
        android:text="@string/payment_amount"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPaymentAmount"
        android:layout_centerHorizontal="true"
        android:shadowColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_proceed"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/amount"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        android:textColor="#000000"
        android:padding="15dp"
        android:onClick="openSuccessActivity"/>

</RelativeLayout>